--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-sslify": "^1.2.0",
     "heroku-self-ping": "^2.0.1",
+    "heroku-ssl-redirect": "^0.1.1",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4"
   },
